--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,6 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
-              azureSubscription: 'Expedo Dev Subscription'
+              azureSubscription: 'Expedo Development (Partner) (expedodevelopment.onmicrosoft.com)'
               appName: '$(WebAppName)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
