Add a deployment stage to the pipeline 6

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -84,6 +84,6 @@ stages:
           - task: AzureWebApp@1
             displayName: 'Azure App Service Deploy: website'
             inputs:
-              azureSubscription: '$(SubscriptionId)'
+              azureSubscription: 'e5d64214-883a-4759-addc-307f55a94e50'
               appName: '$(WebAppName)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
