--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -186,14 +186,14 @@ stages:
               appName: '$(WebAppNameDev)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
 
-- stage: 'Test'
-  displayName: 'Deploy to the test environment'
+- stage: 'QA'
+  displayName: 'Deploy to the QA environment'
   dependsOn: Dev
   jobs:
   - deployment: Deploy
     pool:
       vmImage: 'ubuntu-18.04'
-    environment: test
+    environment: QA
     variables:
     - group: 'Release'
     strategy:
@@ -206,12 +206,12 @@ stages:
             displayName: 'Azure App Service Deploy: website'
             inputs:
               azureSubscription: 'Resource Manager - Tailspin - Space Game'
-              appName: '$(WebAppNameTest)'
+              appName: '$(WebAppNameQA)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
 
 - stage: 'Staging'
   displayName: 'Deploy to the staging environment'
-  dependsOn: Test
+  dependsOn: QA
   jobs:
   - deployment: Deploy
     pool:
